@@ -12,6 +12,7 @@
    *    (ms) Felix Antonius Wilhelm Ostmann reported Resurrector.pm 
              crashes, fixed as suggested by setting the %INC value to 
              the module path.
+   *    (ms) Another caller_depth fix in Log::Log4perl::Catalyst.
 
 1.28 (2010/02/24)
    *    (ms) Fixed caller stack with Buffer composite appender
